[project]
name = "claude-agent-sdk-sample-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "bedrock-agentcore",
    "python-dotenv>=1.2.1",
    "fastapi>=0.131.0",
    "uvicorn>=0.41.0",
    "httpx>=0.28.1",
    "sse-starlette>=3.2.0",
    "dbos>=2.13.0",
]
